xmp_sdk = static_library(
  'xmp_sdk',

  'XMPCommon/source/AutoSharedLock.cpp',
  'XMPCommon/source/ConfigurableImpl.cpp',
  'XMPCommon/source/ConfigurationManagerImpl.cpp',
  'XMPCommon/source/DefaultErrorNotifierImpl.cpp',
  'XMPCommon/source/ErrorImpl.cpp',
  'XMPCommon/source/ErrorNotifierWrapperImpl.cpp',
  'XMPCommon/source/IConfigurable_I.cpp',
  'XMPCommon/source/IConfigurationManager_I.cpp',
  'XMPCommon/source/IError_I.cpp',
  'XMPCommon/source/IErrorNotifier_I.cpp',
  'XMPCommon/source/IMemoryAllocator_I.cpp',
  'XMPCommon/source/IUTF8StringComparator.cpp',
  'XMPCommon/source/IUTF8String_I.cpp',
  'XMPCommon/source/MemoryAllocatorWrapperImpl.cpp',
  'XMPCommon/source/MemoryManagedObject.cpp',
  'XMPCommon/source/SharedMutexImpl.cpp',
  'XMPCommon/source/SharedObjectImpl.cpp',
  'XMPCommon/source/ThreadSafeImpl.cpp',
  'XMPCommon/source/UTF8StringImpl.cpp',
  'XMPCommon/source/XMPCommon.cpp',

  'XMPCore/source/ArrayNodeImpl.cpp',
  'XMPCore/source/ClientDOMParserWrapperImpl.cpp',
  'XMPCore/source/ClientDOMSerializerWrapperImpl.cpp',
  'XMPCore/source/CompositeNodeImpl.cpp',
  'XMPCore/source/CoreConfigurationManagerImpl.cpp',
  'XMPCore/source/CoreObjectFactoryImpl.cpp',
  'XMPCore/source/DOMImplementationRegistryImpl.cpp',
  'XMPCore/source/DOMParserImpl.cpp',
  'XMPCore/source/DOMSerializerImpl.cpp',
  'XMPCore/source/ExpatAdapter.cpp',
  'XMPCore/source/IArrayNode_I.cpp',
  'XMPCore/source/ICompositeNode_I.cpp',
  'XMPCore/source/ICoreConfigurationManager_I.cpp',
  'XMPCore/source/ICoreObjectFactory_I.cpp',
  'XMPCore/source/IDOMImplementationRegistry_I.cpp',
  'XMPCore/source/IDOMParser_I.cpp',
  'XMPCore/source/IDOMSerializer_I.cpp',
  'XMPCore/source/IMetadataConverterUtils_I.cpp',
  'XMPCore/source/IMetadata_I.cpp',
  'XMPCore/source/INameSpacePrefixMap_I.cpp',
  'XMPCore/source/INode_I.cpp',
  'XMPCore/source/INodeIterator_I.cpp',
  'XMPCore/source/IPath_I.cpp',
  'XMPCore/source/IPathSegment_I.cpp',
  'XMPCore/source/ISimpleNode_I.cpp',
  'XMPCore/source/IStructureNode_I.cpp',
  'XMPCore/source/MetadataConverterUtilsImpl.cpp',
  'XMPCore/source/MetadataImpl.cpp',
  'XMPCore/source/NameSpacePrefixMapImpl.cpp',
  'XMPCore/source/NodeImpl.cpp',
  'XMPCore/source/ParseRDF.cpp',
  'XMPCore/source/PathImpl.cpp',
  'XMPCore/source/PathSegmentImpl.cpp',
  'XMPCore/source/RDFDOMParserImpl.cpp',
  'XMPCore/source/RDFDOMSerializerImpl.cpp',
  'XMPCore/source/SimpleNodeImpl.cpp',
  'XMPCore/source/StructureNodeImpl.cpp',
  'XMPCore/source/WXMPIterator.cpp',
  'XMPCore/source/WXMPMeta.cpp',
  'XMPCore/source/WXMPUtils.cpp',
  'XMPCore/source/XMPCore_Impl.cpp',
  'XMPCore/source/XMPIterator2.cpp',
  'XMPCore/source/XMPIterator.cpp',
  'XMPCore/source/XMPMeta2-GetSet.cpp',
  'XMPCore/source/XMPMeta.cpp',
  'XMPCore/source/XMPMeta-GetSet.cpp',
  'XMPCore/source/XMPMeta-Parse.cpp',
  'XMPCore/source/XMPMeta-Serialize.cpp',
  'XMPCore/source/XMPUtils2.cpp',
  'XMPCore/source/XMPUtils.cpp',
  'XMPCore/source/XMPUtils-FileInfo.cpp',

  'XMPFiles/source/HandlerRegistry.cpp',
  'XMPFiles/source/WXMPFiles.cpp',
  'XMPFiles/source/XMPFiles.cpp',
  'XMPFiles/source/XMPFiles_Impl.cpp',
  'XMPFiles/source/FileHandlers/AIFF_Handler.cpp',
  'XMPFiles/source/FileHandlers/ASF_Handler.cpp',
  'XMPFiles/source/FileHandlers/AVCHD_Handler.cpp',
  'XMPFiles/source/FileHandlers/AVCUltra_Handler.cpp',
  'XMPFiles/source/FileHandlers/Basic_Handler.cpp',
  'XMPFiles/source/FileHandlers/CanonXF_Handler.cpp',
  'XMPFiles/source/FileHandlers/FLV_Handler.cpp',
  'XMPFiles/source/FileHandlers/Generic_Handler.cpp',
  'XMPFiles/source/FileHandlers/GIF_Handler.cpp',
  'XMPFiles/source/FileHandlers/HEIF_Handler.cpp',
  'XMPFiles/source/FileHandlers/InDesign_Handler.cpp',
  'XMPFiles/source/FileHandlers/JPEG_Handler.cpp',
  'XMPFiles/source/FileHandlers/MP3_Handler.cpp',
  'XMPFiles/source/FileHandlers/MPEG2_Handler.cpp',
  'XMPFiles/source/FileHandlers/MPEG4_Handler.cpp',
  'XMPFiles/source/FileHandlers/P2_Handler.cpp',
  'XMPFiles/source/FileHandlers/PNG_Handler.cpp',
  'XMPFiles/source/FileHandlers/PostScript_Handler.cpp',
  'XMPFiles/source/FileHandlers/PSD_Handler.cpp',
  'XMPFiles/source/FileHandlers/RIFF_Handler.cpp',
  'XMPFiles/source/FileHandlers/Scanner_Handler.cpp',
  'XMPFiles/source/FileHandlers/SonyHDV_Handler.cpp',
  'XMPFiles/source/FileHandlers/SVG_Handler.cpp',
  'XMPFiles/source/FileHandlers/SWF_Handler.cpp',
  'XMPFiles/source/FileHandlers/TIFF_Handler.cpp',
  'XMPFiles/source/FileHandlers/Trivial_Handler.cpp',
  'XMPFiles/source/FileHandlers/UCF_Handler.cpp',
  'XMPFiles/source/FileHandlers/WAVE_Handler.cpp',
  'XMPFiles/source/FileHandlers/WebP_Handler.cpp',
  'XMPFiles/source/FileHandlers/XDCAMEX_Handler.cpp',
  'XMPFiles/source/FileHandlers/XDCAMFAM_Handler.cpp',
  'XMPFiles/source/FileHandlers/XDCAM_Handler.cpp',
  'XMPFiles/source/FileHandlers/XDCAMSAM_Handler.cpp',
  'XMPFiles/source/FormatSupport/ASF_Support.cpp',
  'XMPFiles/source/FormatSupport/AVCUltra_Support.cpp',
  'XMPFiles/source/FormatSupport/ID3_Support.cpp',
  'XMPFiles/source/FormatSupport/IPTC_Support.cpp',
  'XMPFiles/source/FormatSupport/ISOBaseMedia_Support.cpp',
  'XMPFiles/source/FormatSupport/META_Support.cpp',
  'XMPFiles/source/FormatSupport/MOOV_Support.cpp',
  'XMPFiles/source/FormatSupport/P2_Support.cpp',
  'XMPFiles/source/FormatSupport/PackageFormat_Support.cpp',
  'XMPFiles/source/FormatSupport/PNG_Support.cpp',
  'XMPFiles/source/FormatSupport/PostScript_Support.cpp',
  'XMPFiles/source/FormatSupport/PSIR_FileWriter.cpp',
  'XMPFiles/source/FormatSupport/PSIR_MemoryReader.cpp',
  'XMPFiles/source/FormatSupport/QuickTime_Support.cpp',
  'XMPFiles/source/FormatSupport/Reconcile_Impl.cpp',
  'XMPFiles/source/FormatSupport/ReconcileIPTC.cpp',
  'XMPFiles/source/FormatSupport/ReconcileLegacy.cpp',
  'XMPFiles/source/FormatSupport/ReconcileTIFF.cpp',
  'XMPFiles/source/FormatSupport/RIFF.cpp',
  'XMPFiles/source/FormatSupport/RIFF_Support.cpp',
  'XMPFiles/source/FormatSupport/SVG_Adapter.cpp',
  'XMPFiles/source/FormatSupport/SWF_Support.cpp',
  'XMPFiles/source/FormatSupport/TIFF_FileWriter.cpp',
  'XMPFiles/source/FormatSupport/TIFF_MemoryReader.cpp',
  'XMPFiles/source/FormatSupport/TIFF_Support.cpp',
  'XMPFiles/source/FormatSupport/TimeConversionUtils.cpp',
  'XMPFiles/source/FormatSupport/XDCAM_Support.cpp',
  'XMPFiles/source/FormatSupport/XMPScanner.cpp',
  'XMPFiles/source/FormatSupport/AIFF/AIFFBehavior.cpp',
  'XMPFiles/source/FormatSupport/AIFF/AIFFMetadata.cpp',
  'XMPFiles/source/FormatSupport/AIFF/AIFFReconcile.cpp',
  'XMPFiles/source/FormatSupport/IFF/ChunkController.cpp',
  'XMPFiles/source/FormatSupport/IFF/Chunk.cpp',
  'XMPFiles/source/FormatSupport/IFF/ChunkPath.cpp',
  'XMPFiles/source/FormatSupport/IFF/IChunkBehavior.cpp',
  'XMPFiles/source/FormatSupport/WAVE/BEXTMetadata.cpp',
  'XMPFiles/source/FormatSupport/WAVE/CartMetadata.cpp',
  'XMPFiles/source/FormatSupport/WAVE/Cr8rMetadata.cpp',
  'XMPFiles/source/FormatSupport/WAVE/DISPMetadata.cpp',
  'XMPFiles/source/FormatSupport/WAVE/INFOMetadata.cpp',
  'XMPFiles/source/FormatSupport/WAVE/iXMLMetadata.cpp',
  'XMPFiles/source/FormatSupport/WAVE/PrmlMetadata.cpp',
  'XMPFiles/source/FormatSupport/WAVE/WAVEBehavior.cpp',
  'XMPFiles/source/FormatSupport/WAVE/WAVEReconcile.cpp',
  'XMPFiles/source/FormatSupport/WebP/WebPBehavior.cpp',
  'XMPFiles/source/NativeMetadataSupport/IMetadata.cpp',
  'XMPFiles/source/NativeMetadataSupport/IReconcile.cpp',
  'XMPFiles/source/NativeMetadataSupport/MetadataSet.cpp',
  'XMPFiles/source/PluginHandler/FileHandlerInstance.cpp',
  'XMPFiles/source/PluginHandler/HostAPIImpl.cpp',
  'XMPFiles/source/PluginHandler/Module.cpp',
  'XMPFiles/source/PluginHandler/OS_Utils_Linux.cpp',
  'XMPFiles/source/PluginHandler/PluginManager.cpp',
  'XMPFiles/source/PluginHandler/XMPAtoms.cpp',

  'source/Host_IO-POSIX.cpp',
  'source/IOUtils.cpp',
  'source/PerfUtils.cpp',
  'source/SafeStringAPIs.cpp',
  'source/UnicodeConversions.cpp',
  'source/XIO.cpp',
  'source/XML_Node.cpp',
  'source/XMPFiles_IO.cpp',
  'source/XMP_LibUtils.cpp',
  'source/XMP_ProgressTracker.cpp',
  'source/XMPStream_IO.cpp',

  'third-party/zuid/sources/MD5.cpp',

  cpp_args: [
    '-DUNIX_ENV=1',
    '-DXMP_StaticBuild=1',
    '-DBUILDING_XMPCORE_LIB=1',
    '-DXMP_COMPONENT_INT_NAMESPACE=AdobeXMPCore_Int',
    '-DAdobePrivate=0'
  ],
  include_directories: [
    'public' / 'include',
    'XMPFilesPlugins' / 'api' / 'source',
    '.'
  ]
)
